--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+* {
+  margin: 0;
+}
+
 body {
+  background-color: #e8eceb;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
