Added Provider and reducer, checkout component

--- a/src/Product.css
+++ b/src/Product.css
@@ -26,6 +26,7 @@
 .product > button {
     background: #f69a33;
     border: 1px solid;
+    border-radius: 4px;
     margin-top: 10px;
     border-color: #000c1c;
     color: black;
