Finished checkout, added signup, signin views

--- a/src/Product.css
+++ b/src/Product.css
@@ -28,7 +28,7 @@
     border: 1px solid;
     border-radius: 4px;
     margin-top: 10px;
-    border-color: #000c1c;
+    border-color: #d38730;
     color: black;
 }
 
