--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -1,4 +1,4 @@
-.home {
+/* .home {
     display: flex;
     justify-content: center;
     margin-left: auto;
@@ -18,4 +18,48 @@
     z-index: -1;
     margin-bottom: -150px;
     mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+} */
+
+.home {
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1500px;
+    flex-wrap: wrap; /* Add this to allow wrapping of items */
+}
+
+.home__row {
+    display: flex;
+    z-index: 1;
+    margin-left: 5px;
+    margin-right: 5px;
+    flex-wrap: wrap; /* Enable wrapping for product items */
+    justify-content: space-around; /* This will space out your items nicely */
+}
+
+.home__row > div {
+    flex: 1 1 30%; /* Adjust each product item to take up to 30% of the row width */
+    margin: 10px; /* Add some margin around each product */
+}
+
+.home__image {
+    width: 100%;
+    z-index: -1;
+    margin-bottom: -150px;
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+}
+
+/* For tablets and smaller devices */
+@media (max-width: 768px) {
+    .home__row > div {
+        flex: 1 1 45%; /* Each product will take up roughly half the width of the row */
+    }
+}
+
+/* For mobile devices */
+@media (max-width: 480px) {
+    .home__row > div {
+        flex: 1 1 100%; /* Each product will take the full width of the row */
+    }
 }
