--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,25 +1,3 @@
-/* .home {
-    display: flex;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1500px;
-}
-
-.home__row {
-    display: flex;
-    z-index: 1;
-    margin-left: 5px;
-    margin-right: 5px;
-}
-
-.home__image {
-    width: 100%;
-    z-index: -1;
-    margin-bottom: -150px;
-    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-} */
-
 .home {
     display: flex;
     justify-content: center;
@@ -27,6 +5,19 @@
     margin-right: auto;
     max-width: 1500px;
     flex-wrap: wrap; /* Add this to allow wrapping of items */
+}
+
+.home__toolbar {
+    height: 60px;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #000c1c;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .home__row {
