--- a/client/src/styles/ProductDetails.css
+++ b/client/src/styles/ProductDetails.css
@@ -5,6 +5,17 @@
     text-align: center;
 }
 
+.productDetails__titleContainer {
+    display: flex;
+    background-color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+    border: solid 1px lightgray;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    margin-bottom: 10px;
+}
+
 .productDetails__title {
     width: 100%;
     margin-bottom: 10px;
