--- a/client/src/styles/ProductDetails.css
+++ b/client/src/styles/ProductDetails.css
@@ -100,9 +100,37 @@
     align-items: center;
 }
 
-.popup-content {
+.popup__content {
     background-color: white;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.popup__content .comment-textarea {
+    height: 100px;
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 10px;
+    box-sizing: border-box;
+    resize: none;
+}
+
+.popup__buttonSubmit {
+    background-color: #fccf9d;
+    height: 30px;
+    width: 75%;
+    border-radius: 8px;
+    border: 1px solid lightgray;
+}
+
+.popup__buttonClose {
+    height: 30px;
+    width: 75%;
+    border-radius: 8px;
+    border: 1px solid lightgray;
 }
